use hql , just like dapper